--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br">
 <head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,9 +26,14 @@
 
     <ul>
         <li>
+            <a href="https://sanfios.catalog.yampi.io/atendimento/sobre-a-loja"
+            target="blank"
+            >Sobre a loja</a>
+        </li>
+        <li>
             <a href="https://sanfios.catalog.yampi.io"
             target="blank"
-            >Visite nossa loja</a>
+            >Conheça nossa loja</a>
         </li>
         <li>
             <a href="https://sanfios.catalog.yampi.io/cabosefios?sort_by=best_sellers"
@@ -36,30 +41,25 @@
             >Conheça nossos produtos</a>
         </li>
         <li>
-            <a href="https://sanfios.catalog.yampi.io/0"
+            <a href="https://www.google.com/maps/place/SanFios+Materiais+Elétricos/@-23.5224602,-47.4840388,17z/data=!3m1!4b1!4m6!3m5!1s0x94c58b7ee26a2ff3:0xa466e15a05551e27!8m2!3d-23.5224652!4d-47.4791733!16s%2Fg%2F11kc8mlzwj?authuser=0&entry=ttu"
             target="blank"
-            >Entre em contato pelo e-mail</a>
-        </li>
-        <li>
-            <a href="https://web.whatsapp.com/send?phone=5515998062442"
-            target="blank"
-            >Entre em contato pelo whatsapp</a>
+            >Conheça nosso endereço</a>
         </li>
     </ul>
     <div id="social-links">
-        <a href="https://github.com/yasanakidev" target="_blank">
-            <ion-icon name="logo-github"></ion-icon>
-        </a>
-
-        <a href="https://twitter.com/yasanakidev" target="_blank">
-            <ion-icon name="logo-twitter"></ion-icon>
-        </a>
-
-        <a href="https://instagram.com/yasanakidev" target="_blank">
+        <a href="https://instagram.com/sanfios" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://web.whatsapp.com/send?phone=5515998106254" target="_blank">
+        <a href="https://www.facebook.com/profile.php?id=100093963138634&mibextid=ZbWKwL" target="_blank">
+            <ion-icon name="logo-facebook"></ion-icon>
+        </a>
+
+        <a href="mailto:sanfios.sor@gmail.com" target="_blank">
+            <ion-icon name="mail-outline"></ion-icon>
+        </a>
+
+        <a href="https://web.whatsapp.com/send?phone=5515998062442" target="_blank">
             <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
     </div>
